// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gamedata verify check selection should pass a check with nothing to inspect 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [.git, .idea, particles_unpacked, textures_unpacked, .gitignore, .gitattributes, README.md, LICENSE]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -scripts",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify scripts:",
    "Check gamedata scripts in <duration>, no scripts found",
    "",
    "Project gamedata is valid",
    "Gamedata project verified in <duration>",
  ],
}
`;

exports[`gamedata verify check selection should reject an unknown check 1`] = `
{
  "exitCode": 2,
  "stderr": [
    "error: invalid value 'unknown' for '--checks <checks>...': Unexpected error: Unexpected verification type 'unknown' provided",
    "",
    "For more information, try '--help'.",
  ],
  "stdout": [],
}
`;

exports[`gamedata verify check selection should reject the always-run coverage and collision checks as selections 1`] = `
{
  "exitCode": 2,
  "stderr": [
    "error: invalid value 'coverage' for '--checks <checks>...': Unexpected error: Unexpected verification type 'coverage' provided",
    "",
    "For more information, try '--help'.",
  ],
  "stdout": [],
}
`;

exports[`gamedata verify check selection should reject the always-run coverage and collision checks as selections 2`] = `
{
  "exitCode": 2,
  "stderr": [
    "error: invalid value 'collisions' for '--checks <checks>...': Unexpected error: Unexpected verification type 'collisions' provided",
    "",
    "For more information, try '--help'.",
  ],
  "stdout": [],
}
`;

exports[`gamedata verify check selection should report findings from one named check 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 7/7 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/7 LTX files formatted; 0/32 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/misc/inventory_icons.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/system.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 7 finding(s)",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [.git, .idea, particles_unpacked, textures_unpacked, .gitignore, .gitattributes, README.md, LICENSE]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 7 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/misc/inventory_icons.ltx",
    "Not formatted: <resources>/gamedata/configs/system.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 7 files, 32 sections in <duration>",
    "Verified 0.00%, 2 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
  ],
}
`;

exports[`gamedata verify check selection should run several named checks at once 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 7/7 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/7 LTX files formatted; 0/32 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/misc/inventory_icons.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/system.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 7 finding(s)",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [.git, .idea, particles_unpacked, textures_unpacked, .gitignore, .gitattributes, README.md, LICENSE]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "  -scripts",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 7 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/misc/inventory_icons.ltx",
    "Not formatted: <resources>/gamedata/configs/system.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 7 files, 32 sections in <duration>",
    "Verified 0.00%, 2 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
    "Verify scripts:",
    "Check gamedata scripts in <duration>, no scripts found",
  ],
}
`;

exports[`gamedata verify check selection should write nothing 1`] = `[]`;
